# spatula

./: index.html  style.css
spatula_project/: pyproject.toml
spatula_project/src/spatula_project/: __init__.py  __main__.py
