[project]
name = "spatula-project"
version = "0.1.0"
description = "A demo project for spatula.hackclub.com, a Hack Club YSWS program for high school students wherein you can earn $5 of Telnyx credit for sending SMS messages."
readme = "README.md"
authors = [
    { name = "slashtechno", email = "77907286+slashtechno@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "schedule>=1.2.2",
]

[project.scripts]
spatula-project = "spatula_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true